# poundcake-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  fix.sh  pyproject.toml  quickstart.sh  requirements.txt
docs/: ARCHITECTURE.md  CHEATSHEET.md  CLEAN_VERSION.md  DOCKER_INSTALL.md  EXTRACTION_GUIDE.md  INSTALL.md  MIGRATION_COMPLEX_TO_SIMPLE.md  MIGRATION_SUMMARY.md  PYPROJECT_FIX.md  QUICK_REFERENCE.md  README.md  RENAME_SUMMARY.md  STACKSTORM_INTEGRATION.md  STACKSTORM_MARIADB_INSTALL.md  TARBALL_FIX.md
scripts/: quickstart.sh
src/app/: main.py
src/app/api/: health.py  routes.py
src/app/api/v1/: webhook.py
src/app/core/: config.py  database.py  logging.py  middleware.py
src/app/models/: models.py
src/app/schemas/: schemas.py
src/app/scripts/: init_database.py
src/app/tasks/: alert_tasks.py  celery_app.py  tasks.py
